# renovate-charm

./: CONTRIBUTING.md  LICENSE  README.md  charmcraft.yaml  metadata.yaml  pyproject.toml  renovate.json  requirements.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yaml  main.yml  renovate.yaml
src/: charm.py
tests/integration/: test_charm.py
tests/integration/test-charm/: charmcraft.yaml
tests/integration/test-charm/src/: charm.py
tests/integration/test-charm/tests/integration/: test_charm.py
tests/integration/test-charm/tests/unit/: test_charm.py
tests/unit/: test_charm.py
