[tool.poetry]
name = "renovate-charm"
version = "0.0.1-dev.0"
description = ""
authors = []
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8.10"
ops = "2.6.0"
leftpad = "0.1.2"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "^23.0.0"
ruff = "^0.0.290"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = "^2.2.4"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
coverage = {extras = ["toml"], version = "^7.0.5"}
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
lightkube = "^0.14.0"
pytest = "^7.2.2"
pytest-operator = "^0.29.0"
juju = "2.9.44.1 || 3.1.2.0"  # renovate libjuju
psycopg2-binary = "2.9.7"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
line-length = 99
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]
extend-exclude = ["__pycache__", "*.egg_info"]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.mccabe]
max-complexity = 10
